# CIRISPersist

./: .gitignore  CHANGELOG.md  Cargo.toml  MISSION.md  README.md  clippy.toml  deny.toml  pyproject.toml
.github/workflows/: bench.yml  ci.yml
FSD/: CIRIS_PERSIST.md  CRATE_RECOMMENDATIONS.md  PLATFORM_ARCHITECTURE.md
benches/: canonicalize.rs  common.rs  dedup_key.rs  ingest_pipeline.rs  queue.rs  sign.rs
context/: PROOF_OF_BENEFIT_FEDERATION.md  README.md  TRACE_EVENT_LOG_PERSISTENCE.md  TRACE_WIRE_FORMAT.md  accord_1.2b.txt  agent_persistence_README.md  lens_027_trace_events.sql
dev/bench/: data.js
docs/: BUILD_SIGNING.md  COHABITATION.md  FEDERATION_DIRECTORY.md  INTEGRATION_LENS.md  PUBLIC_SCHEMA_CONTRACT.md  PYPI_PUBLISH.md  ROADMAP.md  SECURITY_AUDIT_v0.1.2.md  SECURITY_AUDIT_v0.1.4.md  THREAT_MODEL.md  TODO_REGISTRY.md  V0.2.0_VERIFY_SUBSUMPTION.md
migrations/postgres/lens/: V001__trace_events.sql  V002__audit_anchor_cols.sql  V003__scrub_envelope.sql  V004__federation_directory.sql  V005__readonly_role.sql  V006__deployment_profile.sql  V007__edge_outbound_queue.sql
migrations/sqlite/lens/: V001__trace_events.sql  V003__scrub_envelope.sql  V004__federation_directory.sql  V006__deployment_profile.sql  V007__edge_outbound_queue.sql
python/ciris_persist/: __init__.py  ciris_persist.pyi
scripts/: bench_trend.py
src/: ingest.rs  journal.rs  lib.rs  prelude.rs  queue.rs
src/federation/: mod.rs  types.rs
src/ffi/: mod.rs  pyo3.rs
src/manifest/: mod.rs
src/outbound/: mod.rs  types.rs
src/schema/: envelope.rs  events.rs  mod.rs  trace.rs  version.rs  wire_datetime.rs
src/scrub/: mod.rs
src/server/: mod.rs
src/signing/: mod.rs
src/store/: backend.rs  decompose.rs  memory.rs  mod.rs  postgres.rs  sqlite.rs  types.rs
src/verify/: canonical.rs  ed25519.rs  hybrid.rs  mod.rs
tests/: av4_timestamp_round_trip.rs  qa_harness.rs  wire_format_fixtures.rs
tests/fixtures/wire/2.7.0/: README.md  detailed_ed713366.json  full_traces_0afd50b2.json  full_traces_ed713366.json  generic_0afd50b2.json
tools/legacy/: README.md  ciris_manifest.py
