[package]
name = "ciris-persist"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unified Rust persistence for the CIRIS Trinity — signed events, time-series, runtime state."
repository = "https://github.com/CIRISAI/CIRISPersist"
authors = ["CIRIS AI <hello@ciris.ai>"]
rust-version = "1.75"
publish = false

# Status: Phase 1 in flight (TDD + MDD; see MISSION.md).
# Dep tree is added per-phase as features land. Mission framing per
# component lives in MISSION.md §2; trait shapes sealed Phase 1 per
# PLATFORM_ARCHITECTURE.md §5.

[features]
default = []

# Phase 1 features.
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:bytes", "dep:postgres-types", "dep:refinery", "dep:openssl"]
server   = ["dep:axum", "dep:tower", "dep:http-body-util"]
# pyo3 implies postgres — the lens FastAPI integration shape (FSD §3.5)
# needs the Postgres backend to be available.
pyo3     = ["dep:pyo3", "postgres"]

# Phase 2 features (declared now; impls land later — MISSION.md §2 / FSD §4).
sqlite         = ["dep:rusqlite"]
c-abi          = []
peer-replicate = []

# Always-on (no_std-cleanness for schema/verify is enforced separately
# by `cargo build --no-default-features --features no_std` per
# PLATFORM_ARCHITECTURE.md §3.4 — Phase 3 stretch).

[dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2          = "0.10"
chrono        = { version = "0.4", features = ["serde"] }
thiserror     = "2"
tracing       = "0.1"
base64        = "0.22"
hex           = "0.4"

# Phase 1 — postgres feature
tokio-postgres    = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
bytes             = { version = "1", optional = true }
postgres-types    = { version = "0.2", optional = true }
refinery          = { version = "0.9", features = ["tokio-postgres"], optional = true }
# refinery transitively pulls postgres-native-tls → native-tls →
# openssl-sys. We use NoTls so the TLS path is never exercised, but
# the dep tree still requires openssl to *build*. Vendored builds
# openssl from source for whatever target arch we're compiling for —
# no system libssl-dev:<arch> needed. The cost is a few extra seconds
# of CI compile time; the benefit is arm64/Pi-class cross-compile
# works without multi-arch apt gymnastics.
openssl           = { version = "0.10", features = ["vendored"], optional = true }

# Phase 1 — server feature
axum  = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
http-body-util = { version = "0.1", optional = true }

# Phase 1 — pyo3 feature
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"], optional = true }

# Phase 2 — sqlite feature (declared; impl in Phase 2 cutover)
rusqlite = { version = "0.39", features = ["bundled", "chrono", "serde_json"], optional = true }

# Phase 1 robustness — local journal for outage tolerance (FSD §3.4)
redb = "4"

# Async runtime — phase 1+
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "time"] }

[dev-dependencies]
# Mission category §4: canonicalization parity. Used to validate our
# Python-compatible canonicalizer against the JCS reference. NOT a
# runtime dep (see CRATE_RECOMMENDATIONS §6).
serde_json_canonicalizer = "0.3"
hex-literal = "0.4"
proptest = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"
# Postgres integration tests share a single test database; parallel
# test execution races on schema setup. serial_test forces the
# postgres-tagged tests to run one at a time without slowing the
# rest of the suite.
serial_test = "3"

[lib]
name = "ciris_persist"
path = "src/lib.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
# SECURITY_AUDIT_v0.1.2.md §4.2 — panic = "abort" so a bug in a
# transitive dep or a future unwrap() we missed crashes the
# process fast (supervisor restarts, journal-replay path runs).
# Unwind into a half-shut state with no restart trigger is the
# failure mode this prevents.
panic = "abort"
# SECURITY_AUDIT_v0.1.2.md §4.3 — overflow-checks=true on release
# turns AV-17-class integer-truncation bugs into runtime panics
# instead of silent corruption. Single-digit-percent perf cost;
# defense-in-depth on top of the typed try_into AV-17 fix.
overflow-checks = true
