[package]
name = "ciris-persist"
version = "0.1.19"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unified Rust persistence for the CIRIS Trinity — signed events, time-series, runtime state."
repository = "https://github.com/CIRISAI/CIRISPersist"
authors = ["CIRIS AI <hello@ciris.ai>"]
rust-version = "1.75"
publish = false

# Status: Phase 1 in flight (TDD + MDD; see MISSION.md).
# Dep tree is added per-phase as features land. Mission framing per
# component lives in MISSION.md §2; trait shapes sealed Phase 1 per
# PLATFORM_ARCHITECTURE.md §5.

[features]
default = []

# Phase 1 features.
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:bytes", "dep:postgres-types", "dep:refinery", "dep:openssl"]
server   = ["dep:axum", "dep:tower", "dep:http-body-util"]
# pyo3 implies postgres — the lens FastAPI integration shape (FSD §3.5)
# needs the Postgres backend to be available.
pyo3     = ["dep:pyo3", "postgres"]

# Phase 2 features (declared now; impls land later — MISSION.md §2 / FSD §4).
sqlite         = ["dep:rusqlite"]
c-abi          = []
peer-replicate = []

# v0.1.3 — optional TLS for the Postgres connection pool. Defaults
# to no-TLS (deployments where the lens process and Postgres are
# on the same host or a private network). Enable when the DB is
# remote — sovereign-mode deployments with Postgres-over-WAN, or
# any deployment where TLS at the lens-API edge doesn't also
# cover the lens→DB hop. THREAT_MODEL.md AV-18.
tls = ["dep:tokio-postgres-rustls", "dep:rustls", "dep:rustls-native-certs"]

# Always-on (no_std-cleanness for schema/verify is enforced separately
# by `cargo build --no-default-features --features no_std` per
# PLATFORM_ARCHITECTURE.md §3.4 — Phase 3 stretch).

[dependencies]
# v0.1.9 — bumped from v1.6.4 to v1.8.0. v1.7 brought
# `HardwareSigner::storage_descriptor()` (closes the prediction
# shim in src/ffi/pyo3.rs); v1.8 brought the generic BuildManifest
# validator + ExtrasValidator trait + ciris-build-sign CLI (replaces
# tools/ciris_manifest.py and adds hybrid Ed25519 + ML-DSA-65 manifest
# signing).
ciris-keyring     = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v1.8.0", version = "1.8" }
ciris-verify-core = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v1.8.0", version = "1.8" }
async-trait   = "0.1"
# v0.1.19 — Python-compatible float formatter for the canonicalizer
# (CIRISPersist#7). Rust's ryu (via serde_json's Display impl on
# Number) and Python's float.__repr__ (Gay's dtoa) disagree on
# shortest-round-trip output for ambiguous doubles, breaking
# byte-equality with the agent's signed canonical bytes. lexical-core
# with PYTHON_LITERAL format + threshold-tuned WriteFloatOptions +
# our scientific-form post-process matches Python's repr byte-for-
# byte for the floats production traffic actually emits (and most
# edge cases).
lexical-core  = { version = "1", features = ["format", "write-floats"] }
# v0.1.14 — filesystem advisory locks for the cohabitation
# bootstrap (docs/COHABITATION.md). POSIX flock cross-process,
# auto-releases on FD close (including panic). Used to serialize
# `get_platform_signer()` calls when multiple workers/processes
# coexist on one host. fs4 is the maintained fork of fs2; pinned
# to 0.x because the API is stable but pre-1.0.
fs4           = "0.13"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2          = "0.10"
chrono        = { version = "0.4", features = ["serde"] }
thiserror     = "2"
tracing       = "0.1"
base64        = "0.22"
hex           = "0.4"

# Phase 1 — postgres feature
tokio-postgres    = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
bytes             = { version = "1", optional = true }
postgres-types    = { version = "0.2", optional = true }
refinery          = { version = "0.9", features = ["tokio-postgres"], optional = true }

# v0.1.3 — TLS for tokio-postgres connection pool (THREAT_MODEL.md AV-18).
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls                = { version = "0.23", optional = true }
rustls-native-certs   = { version = "0.8", optional = true }
# refinery transitively pulls postgres-native-tls → native-tls →
# openssl-sys. We use NoTls so the TLS path is never exercised, but
# the dep tree still requires openssl to *build*. Vendored builds
# openssl from source for whatever target arch we're compiling for —
# no system libssl-dev:<arch> needed. The cost is a few extra seconds
# of CI compile time; the benefit is arm64/Pi-class cross-compile
# works without multi-arch apt gymnastics.
openssl           = { version = "0.10", features = ["vendored"], optional = true }

# Phase 1 — server feature
axum  = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
http-body-util = { version = "0.1", optional = true }

# Phase 1 — pyo3 feature
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"], optional = true }

# Phase 2 — sqlite feature (declared; impl in Phase 2 cutover)
# v0.1.9 — pinned to 0.31 to match ciris-verify-core's transitive
# rusqlite. Both crates declare `links = "sqlite3"`, so cargo's
# resolver requires a single libsqlite3-sys version across the
# workspace. We have no SQLite code yet (Phase 2 stub); when
# we ship the SQLite backend the upstream pin can move with us.
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"], optional = true }

# Phase 1 robustness — local journal for outage tolerance (FSD §3.4)
redb = "4"

# Async runtime — phase 1+
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "time"] }

[dev-dependencies]
# Mission category §4: canonicalization parity. Used to validate our
# Python-compatible canonicalizer against the JCS reference. NOT a
# runtime dep (see CRATE_RECOMMENDATIONS §6).
serde_json_canonicalizer = "0.3"
hex-literal = "0.4"
proptest = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"
# Postgres integration tests share a single test database; parallel
# test execution races on schema setup. serial_test forces the
# postgres-tagged tests to run one at a time without slowing the
# rest of the suite.
serial_test = "3"
# v0.1.7 — bench harness. criterion writes JSON to target/criterion/
# which github-action-benchmark consumes for the gh-pages trend
# chart. Pinning to 0.5.x; 0.6 changes the JSON shape and would
# break the action.
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "ciris_persist"
path = "src/lib.rs"
# v0.1.10 — explicit crate-type so maturin builds the PyO3 extension
# module (cdylib) as the wheel's Python module, not as a "binary
# project wheel" containing src/bin/* artifacts.
#
# Background: v0.1.9 added `src/bin/emit_persist_extras.rs` as a CI
# helper. With the existing `python-source = "python"` mixed-mode
# layout in pyproject.toml plus the new `[[bin]]` targets, maturin
# 1.13's auto-detection picked the binary target instead of the lib,
# producing cp312-cp312 wheels (no abi3) instead of cp311-abi3
# wheels. Explicit `crate-type = ["cdylib", "rlib"]` makes the
# lib unambiguous: cdylib is the Python module; rlib keeps the
# library importable from src/bin/* and integration tests.
crate-type = ["cdylib", "rlib"]

# v0.1.7 — bench declarations. Each `[[bench]]` entry runs as a
# separate harness binary so failures in one don't mask the rest.
# `harness = false` opts out of the default test harness in favor of
# criterion's. SECURITY_AUDIT_v0.1.4.md §5 cited "p99 ingest latency"
# as a v0.2.x track item; these benches are the regression baseline
# for that work.
[[bench]]
name = "ingest_pipeline"
harness = false
required-features = ["postgres"]

[[bench]]
name = "canonicalize"
harness = false

[[bench]]
name = "sign"
harness = false

[[bench]]
name = "dedup_key"
harness = false

[[bench]]
name = "queue"
harness = false
required-features = ["postgres"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
# SECURITY_AUDIT_v0.1.2.md §4.2 — panic = "abort" so a bug in a
# transitive dep or a future unwrap() we missed crashes the
# process fast (supervisor restarts, journal-replay path runs).
# Unwind into a half-shut state with no restart trigger is the
# failure mode this prevents.
panic = "abort"
# SECURITY_AUDIT_v0.1.2.md §4.3 — overflow-checks=true on release
# turns AV-17-class integer-truncation bugs into runtime panics
# instead of silent corruption. Single-digit-percent perf cost;
# defense-in-depth on top of the typed try_into AV-17 fix.
overflow-checks = true
