[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "ciris-persist"
description = "Unified Rust persistence for the CIRIS federation — signed events, time-series, runtime state."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "CIRIS AI", email = "hello@ciris.ai" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Database",
    "Topic :: System :: Logging",
]
# v0.2.4 — verify subsumption (CIRISPersist#4): pip-install-time
# subsumption. `pip install ciris-persist` pulls `ciris-verify`
# transitively, which puts `ciris-build-sign` + `ciris-build-verify`
# on PATH. Lens / agent / bridge get one install command for the
# whole verify+persist stack — no separate `pip install ciris-verify`
# step needed for the build-manifest signing CLIs.
#
# Pin to >=1.8.6 because the v1.8.6 wheel is the first that ships
# the CLI console_scripts on all 5 platforms (linux x86_64/aarch64,
# macos x86_64/arm64, windows x86_64). Earlier 1.8.x had the source
# but not the binary entry points on PyPI.
#
# Pin to <2 because we expect ciris-verify to follow semver-major
# on breaking changes; v0.2.x persist consumes v1.x verify. Bump
# to >=2 when v0.3.x persist coordinates with v2.x verify.
dependencies = [
    "ciris-verify>=1.8.6,<2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://ciris.ai"
Repository = "https://github.com/CIRISAI/CIRISPersist"
Issues = "https://github.com/CIRISAI/CIRISPersist/issues"

[tool.maturin]
features = ["pyo3"]
module-name = "ciris_persist"
# abi3-py311: one wheel covers Python 3.11+ per
# PLATFORM_ARCHITECTURE.md §3.5.
python-source = "python"
strip = true
